Moved from deprecated methods to current, moved string concat to text blocks